# mems-nav-dataset

./: README.md  pyproject.toml
data/raw/: ReadMe.md
data/raw/2023-08-04_214758/: Location.csv  LocationGps.csv  LocationNetwork.csv  Metadata.csv
src/mems_nav_dataset/: earth.py  prepare.py  preprocessor.py
